<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
>
    <data>
        <import type="android.view.View"/>
        <variable
                name="viewModel"
                type="com.example.contactsblocker.module.home.citySearch.BlockedListViewModel"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="@dimen/spacing_zero"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:navigationIcon="@drawable/ic_arrow_back_black"
        >

            <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_block_list"
                    android:textSize="@dimen/font_size_large"
                    android:layout_gravity="start"
                    android:textColor="@color/white"
            />

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/label_add"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_add"
                    android:textSize="@dimen/font_size_medium"
                    android:layout_gravity="end"
                    android:layout_marginEnd="@dimen/spacing_medium"
                    android:textColor="@color/white"
            />
        </androidx.appcompat.widget.Toolbar>


        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="@dimen/spacing_zero"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar"
                app:recyclerViewAdapter="@{viewModel.contacts}"
                app:layout_constraintBottom_toBottomOf="parent"
        >
        </androidx.recyclerview.widget.RecyclerView>

        <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="@{viewModel.dataLoading? View.VISIBLE : View.GONE}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/recycler_view"
                app:layout_constraintBottom_toBottomOf="@+id/recycler_view"/>

        <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_no_contacts_available"
                android:textColor="@color/med_gray"
                android:visibility="@{viewModel.isDataUnavalable? View.VISIBLE : View.GONE}"
                app:layout_constraintTop_toTopOf="@+id/recycler_view"
                app:layout_constraintBottom_toBottomOf="@+id/recycler_view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>