<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
>
    <data>
        <import type="android.view.View"/>
        <variable
                name="viewModel"
                type="com.example.contactsblocker.module.home.cityDetail.ContactDetailViewModel"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="@dimen/spacing_zero"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:navigationIcon="@drawable/ic_arrow_back_black">

            <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_detail"
                    android:textSize="@dimen/font_size_large"
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    />

        </androidx.appcompat.widget.Toolbar>

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_large"
                android:text="@string/label_name"
                android:textSize="@dimen/font_size_medium"
                android:textColor="@color/colorPrimary"
                android:layout_marginStart="@dimen/spacing_medium"
                app:layout_constraintTop_toBottomOf="@+id/toolbar"
                app:layout_constraintStart_toStartOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/name_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/font_size_small"
                android:text="@{viewModel.name}"
                android:textSize="@dimen/font_size_medium"
                android:textColor="@color/dark_gray"
                android:layout_marginStart="@dimen/spacing_medium"
                app:layout_constraintTop_toBottomOf="@+id/name_label"
                app:layout_constraintStart_toStartOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/number_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_medium"
                android:text="@string/label_number"
                android:textSize="@dimen/font_size_medium"
                android:textColor="@color/colorPrimary"
                android:layout_marginStart="@dimen/spacing_medium"
                app:layout_constraintTop_toBottomOf="@+id/name_value"
                app:layout_constraintStart_toStartOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/number_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/font_size_small"
                android:text="@{viewModel.number}"
                android:textSize="@dimen/font_size_medium"
                android:textColor="@color/dark_gray"
                android:layout_marginStart="@dimen/spacing_medium"
                app:layout_constraintTop_toBottomOf="@+id/number_label"
                app:layout_constraintStart_toStartOf="parent"/>

        <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/block_status"
                android:layout_width="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:text="@{viewModel.isBlock ? @string/label_unblock : @string/label_block}"
                android:onClick="@{()->viewModel.updateBlockStatus()}"
                android:background="@drawable/ic_btn_border"
                app:layout_constraintTop_toBottomOf="@+id/number_value"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>